<resources>
    <string name="app_name">GLA1_FitnessAppUpdated</string>
    <string name="Title1">BIG</string>
    <string name="Title2">STEP</string>
    <string name="Login_Txt">TextView</string>
    <string name="login">Login</string>
    <string name="username_or_email">Username or Email</string>
    <string name="example_example_com">example@example.com</string>
    <string name="password">Password</string>
    <string name="password_entered">***********</string>
    <string name="forgot">TextView</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_pasword">Forgot Pasword?</string>
    <string name="forgot_password_hint">Forgot Password?</string>
    <string name="login_title">Login</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcomer_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="welcome_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="Welcome_Txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="login_btn">Login</string>
    <string name="Btn_Login">Button</string>
    <string name="Login">Login</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="singup_txt">Don\'t have an account?</string>
    <string name="sign_up_txt_2">Sign up</string>
    <string name="create_account_txt">Create Account</string>
    <string name="let_s_start_txt">Let\'s Start!</string>
    <string name="login_link">Sign Up</string>
    <string name="full_name_title">Full name</string>
    <string name="hint_txt">Maria Johnson</string>
    <string name="email_or_mobile_number_title">Email or Mobile Number</string>
    <string name="hint_phonenumber">+123 567 8900</string>
    <string name="confirm_password_title">Confirm Password</string>
    <string name="login_link_2">Login</string>
    <string name="phone_number">+123-568-8900</string>
    <string name="forgotten_password_title">Forgotten Password</string>
    <string name="forgot_password_question">Forgot Password?</string>
    <string name="enter_your_email_address_or_phone_number">Enter your Email address or Phone Number</string>
    <string name="email_hint">example@example.com</string>
    <string name="continue_btn">Continue</string>
    <string name="set_password_titlwe">Set Password</string>
    <string name="set_password_title">Set Password</string>
    <string name="workout_logs_title">Workout Logs</string>
    <string name="worktout_title">Chest</string>
    <string name="wroktou_title_1">Arms</string>
    <string name="btn_add_workout">Reset</string>
    <string name="workout_title">Chest</string>
    <string name="add_btn">+</string>
    <string name="mon">Mon</string>
    <string name="sun">Sun</string>
    <string name="mon1">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="fri">Fri</string>
    <string name="thu">Thu</string>
    <string name="sat">Sat</string>
    <string name="sun2">Sun</string>
    <string name="mon2">Mon</string>
    <string name="tue1">Tue</string>
    <string name="wed2">Wed</string>
    <string name="thu2">Thu</string>
    <string name="fri2">Fri</string>
    <string name="sat2">Sat</string>
    <string name="sun1">Sun</string>
    <string name="legs">Legs</string>
    <string name="mon3">Mon</string>
    <string name="tue2">Tue</string>
    <string name="wed1">Wed</string>
    <string name="thu1">Thu</string>
    <string name="fri1">Fri</string>
    <string name="sat1">Sat</string>
    <string name="todo">TODO</string>
    <string name="search">Search</string>
    <string name="search_placeholder">Search</string>
    <string name="search_hint">Search</string>
    <string name="all_btn">All</string>
    <string name="search_btn">Search</string>
    <string name="top_searches_title">Top Searches</string>
    <string name="circuit_btn">Circuit</string>
    <string name="split_btn">Split</string>
    <string name="challenge_btn">Challenge</string>
    <string name="legs_btn">Legs</string>
    <string name="cardio_btn">Cardio</string>
    <string name="settings_title">Settings</string>
    <string name="password_setting_title">Password Setting</string>
    <string name="delete_account">Delete Account</string>
    <string name="back_txt">Back</string>
    <string name="back_txt_login">Back</string>
    <string name="sign_up">Sign up</string>
    <string name="back_password_btn">Back</string>
    <string name="reset_btn">Reset</string>
    <string name="todo_Not_too_sure">TODO</string>
    <string name="back_workout_txt">Back</string>
    <string name="back_settings_txt">Back</string>
    <string name="dark_mode_btn">Dark Mode</string>
    <string name="dark_mode_btn_updated">Dark Mode</string>
    <string name="about_txt">About</string>
</resources>