<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/launch_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="0dp">

    <LinearLayout
        android:id="@+id/titles"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/previous_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/previous_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/BackgroundColor"
                app:srcCompat="@drawable/arrow_previous" />

            <TextView
                android:id="@+id/back_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back_txt_login"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Top_text"
            android:layout_width="match_parent"
            android:layout_height="197dp"
            android:orientation="vertical"
            android:textAlignment="center"
            tools:ignore="RtlCompat">

            <TextView
                android:id="@+id/Username_title"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/welcome_title"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/welcome_txt"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/Welcome_Txt"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/workout_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/login_title"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Workout_Log"
            android:layout_width="match_parent"
            android:layout_height="271dp"
            android:background="@color/GreenSecondary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/email_address"
                android:layout_width="351dp"
                android:layout_height="39dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/username_or_email"
                android:textAlignment="viewStart"
                android:textColor="#3C3C3C"
                android:textSize="18sp"
                tools:ignore="RtlCompat" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_Input"
                android:layout_width="351dp"
                android:layout_height="52dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/white"
                android:hint="@string/example_example_com"
                android:padding="10dp"
                android:textAlignment="gravity"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/Password_Title"
                android:layout_width="350dp"
                android:layout_height="39dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/password"
                android:textAlignment="viewStart"
                android:textColor="#3C3C3C"
                android:textSize="18sp"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/Password_input"
                android:layout_width="350dp"
                android:layout_height="52dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:autofillHints=""
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/password_entered"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/Forgot_txt"
                android:layout_width="352dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/forgot_password_hint"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Btn_Workout"
            android:layout_width="match_parent"
            android:layout_height="248dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/Login_btn"
                android:layout_width="177dp"
                android:layout_height="58dp"
                android:layout_marginStart="120dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/GreenSecondary"
                android:gravity="center"
                android:text="@string/Login" />

            <TextView
                android:id="@+id/signup_txt"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:padding="1dp"
                android:text="@string/or_sign_up_with"
                android:textAlignment="center" />

            <LinearLayout
                android:id="@+id/social_media"
                android:layout_width="269dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/gmail_login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="150dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/BackgroundColor"
                    app:srcCompat="@drawable/gmail" />

                <ImageButton
                    android:id="@+id/facebook_login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/BackgroundColor"
                    app:srcCompat="@drawable/facebook_icon" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/signup_txt2"
                    android:layout_width="159dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="0dp"
                    android:gravity="center|end"
                    android:padding="2dp"
                    android:text="@string/singup_txt"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/signup_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/BackgroundColor"
                    android:text="@string/sign_up"
                    android:textColor="@color/GreenSecondary" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>