<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/launch_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    android:orientation="vertical"
    android:padding="0dp"
    android:textAlignment="center">

    <LinearLayout
        android:id="@+id/titles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/previous_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/BackgroundColor"
                app:srcCompat="@drawable/arrow_previous" />

            <TextView
                android:id="@+id/back_txt_forgotten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Back"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/workout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/forgotten_password_title"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/Username_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/forgot_password_question"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Top_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:textAlignment="center"
        tools:ignore="RtlCompat,UselessParent">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Workout_Log"
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:layout_marginTop="100dp"
        android:background="@color/GreenSecondary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/email_address"
            android:layout_width="351dp"
            android:layout_height="39dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/enter_your_email_address_or_phone_number"
            android:textAlignment="viewStart"
            android:textColor="#3C3C3C"
            android:textSize="18sp"
            tools:ignore="RtlCompat" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_Input"
            android:layout_width="350dp"
            android:layout_height="52dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/white"
            android:hint="@string/email_hint"
            android:padding="10dp"
            android:textAlignment="gravity"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Btn_Workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/Login_btn"
            android:layout_width="177dp"
            android:layout_height="58dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/GreenSecondary"
            android:gravity="center"
            android:text="@string/continue_btn" />

    </LinearLayout>

</LinearLayout>